test/constBlockConsuming10.slq

def main(){
	y:=H(0);
	x:=dup(y);
	if x{ x=y; } /// error
	else { x=y; }
	return x;
}
